[Fix #128843781] fix container wrap from base.html

--- a/codango/static/scss/base.scss
+++ b/codango/static/scss/base.scss
@@ -9,6 +9,9 @@ body {
 hr {
   margin-top: 5px;
 }
+.top-margin {
+    margin-top: 100px;
+}
 /* navbar styling */
 .static-nav.navbar-default {
   border: none;
